Development
	More work on realplayer emulation
0.5.1
	Implement several WMP controls methods
	Tell the player what URL we are getting the data from via SetURL
	Cleanup K/s display to show only tenths, also make sure we use floating point math
	A K/s info while caching for non-streaming data
	New dbus callback "ReloadPlugins" tells browser to reload its plugin settings
	Allow configuration of plugins by setting from gconf
	In send_signal_when_ready change the sleep to a smaller value and then only try 100 times before dropping out
	Implement PlayPause JS method
	Remove custom dbus dispatcher for Opera, doesn't seem to be needed
	Make sure dbus dispatcher is stopped
	Use private dbus connection
0.5.0
	If mimetype is video/x-flv then mark the media as streaming
	Version sync with gnome-mplayer
	Handle more javascript methods, that allow setting callbacks on events
	Make qtsrc locations work, makes some apple sites work
	Add configure option --disable-caching, which never uses local storage for the media cache
	If cache size from gnome-mplayer is 0, set media to streaming
	Fix several bugs in dbus event processor
	Add the ability to set the onClick callback via a javascript method
0.0.7
	Add "debug" option to the embed tag so that we can watch output in certain test cases
	Detect ICY streams on download and switch them to streaming media
	Add embed command 'NoCache'
	Callback event "onDestroy"
	Add support for option "enableContextMenu"
	Add more callback events onmouseclick, onmousedown, onmouseup, onmouseover, onmouseout
	GUI message improvements
	Implement MediaComplete event and callback
	Implement Event handling from gnome-mplayer
	Added video/x-m4v mimetype, made a video at arstechnica work.
	Slow down the cache update messages to only 1 per 1/2 second
	Fix SetWindow return value, helps Opera some
	More safety checks in Write method
	Don't allow NULL filename
	When opening the media and no window has been set, tell gnome-mplayer to run hidden